# json-log-reader

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
assets/: sw.js
src/: app.rs  main.rs
src/app/: filtered_log_entries_tab.rs  log_entries_tab.rs  log_entries_table.rs  log_entry_context_tab.rs  log_file_reader.rs  log_view.rs  search_window.rs
